Added inheritance for Model classes. Added tests for various classes. Updated DataHandlerTests. Rennamed Statistics to InteractionStaistics. Added new classes to handle the result of the models. FileWriter should now be threadsafe.

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(logisticRegression)
+add_subdirectory(handlers)
 
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
@@ -6,17 +7,10 @@ set(INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
-if(${CPU})
-  set(CPU_SOURCE
-    #${CMAKE_CURRENT_SOURCE_DIR}/CpuModelHandler.cpp
-  )
-else()
-  set(GPU_SOURCE
-    ${GPU_SOURCE}
-    ${CMAKE_CURRENT_SOURCE_DIR}/GpuModelHandler.cpp
-    PARENT_SCOPE
-  )
-endif()
+set(GPU_SOURCE
+  ${GPU_SOURCE}
+  PARENT_SCOPE
+)
 
 set(GPU_NVCC_SOURCE
   ${GPU_NCC_SOURCE}
@@ -26,6 +20,12 @@ set(GPU_NVCC_SOURCE
 set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/Model.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelResult.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelConfiguration.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelInformation.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CombinedResults.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelInformationFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CombinedResultsFactory.cpp
   PARENT_SCOPE
 )
