--- a/test/model/CMakeLists.txt
+++ b/test/model/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(logisticRegression)
+add_subdirectory(handlers)
 
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
@@ -6,20 +7,9 @@ set(TEST_INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
-if(${CPU})
-  set(CPU_TEST_SOURCE
-    ${CMAKE_CURRENT_SOURCE_DIR}/CpuModelHandlerTest.cpp
-  )
-else()
-  set(GPU_TEST_SOURCE
-    #${CMAKE_CURRENT_SOURCE_DIR}/GpuModelHandlerTest.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/GpuModelHandlerLRIntegrationTest.cpp
-  )
-endif(${CPU})
-
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${GPU_TEST_SOURCE}
-  ${CPU_TEST_SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelInformationTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelInformationFactoryTest.cpp
   PARENT_SCOPE
 )
