--- a/test/statistics/CMakeLists.txt
+++ b/test/statistics/CMakeLists.txt
@@ -6,6 +6,10 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/StatisticsTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/InteractionStatisticsTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsFactoryTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTableTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTableFactoryTest.cpp
   PARENT_SCOPE
 )
