Changed so both additive and multiplicative model is always calculated. Added more inheritance structures.

--- a/src/statistics/CMakeLists.txt
+++ b/src/statistics/CMakeLists.txt
@@ -7,7 +7,9 @@ set(INCLUDE_DIRECTORIES
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/InteractionStatistics.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/InteractionStatisticsFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelStatistics.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/OddsRatioStatistics.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelStatisticsFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatistics.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTable.cpp
