Added number of iterations to result file. Moved some sync to fermi instead of profiling. Changed some timers from boost to cuda events. Added class for cuda events called Event. Updates to report

--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -13,6 +13,7 @@ if(NOT ${CPU})
     ${CMAKE_CURRENT_SOURCE_DIR}/Device.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/StreamFactory.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Event.cpp
     PARENT_SCOPE
   )
 endif()
