Started restructuring to fix handling of missing data. Starting to classes and structures for handling more calculations on the GPU.

--- a/src/container/data/CMakeLists.txt
+++ b/src/container/data/CMakeLists.txt
@@ -1,3 +1,10 @@
+add_subdirectory(cpu)
+add_subdirectory(factories)
+
+if(NOT ${CPU})
+  add_subdirectory(cuda)
+endif()
+
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -10,6 +17,7 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/InteractionVector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeVector.cpp
   PARENT_SCOPE
 )
 
