--- a/test/fileIO/readers/CMakeLists.txt
+++ b/test/fileIO/readers/CMakeLists.txt
@@ -11,6 +11,7 @@ set(TEST_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/CSVReaderTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentCSVReaderTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/FileIOIntegrationTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/DataFilesReaderTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataFilesReaderFactoryTest.cpp
   PARENT_SCOPE
 )
