--- a/test/cuda/CMakeLists.txt
+++ b/test/cuda/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapterTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TransferTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CublasWrapperTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DeviceTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/StreamTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/StreamFactoryTest.cpp
