Restructured some folders. Add MissingDataHandler and it's two children for CPU and GPU.

--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_subdirectory(enums)
 add_subdirectory(factories)
+add_subdirectory(cpu)
+add_subdirectory(basic)
+
+if(NOT ${CPU})
+  add_subdirectory(cuda)
+endif()
 
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
@@ -9,13 +15,10 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/Id.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/SNP.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/Person.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesMatrixHandler.cpp
   PARENT_SCOPE
 )
