--- a/src/data/factories/CMakeLists.txt
+++ b/src/data/factories/CMakeLists.txt
@@ -7,6 +7,9 @@ set(INCLUDE_DIRECTORIES
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesHandlerFactory.cpp
   PARENT_SCOPE
 )
