--- a/src/container/data/cuda/CMakeLists.txt
+++ b/src/container/data/cuda/CMakeLists.txt
@@ -6,6 +6,11 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
+  PARENT_SCOPE
+)
+
+set(GPU_SOURCE
+  ${GPU_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaEnvironmentVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaSNPVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaInteractionVector.cpp
