Switched some classes to template instead of inheritance

--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -13,6 +13,11 @@ set(INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
+set(GPU_SOURCE
+  ${GPU_SOURCE}
+  PARENT_SCOPE
+)
+
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
