--- a/src/data/factories/cpu/CMakeLists.txt
+++ b/src/data/factories/cpu/CMakeLists.txt
@@ -6,11 +6,6 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
-  PARENT_SCOPE
-)
-
-set(GPU_SOURCE
-  ${GPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/CudaMissingDataHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CpuCovariatesHandlerFactory.cpp
   PARENT_SCOPE
 )
