Added InteractionModel with responsibility to apply the additive and multiplicative model to the vectors

--- a/src/statistics/CMakeLists.txt
+++ b/src/statistics/CMakeLists.txt
@@ -1,19 +1,23 @@
+add_subdirectory(factories)
+add_subdirectory(interaction)
+
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
   PARENT_SCOPE
 )
 
+set(GPU_SOURCE
+  ${GPU_SOURCE}
+  PARENT_SCOPE
+)
+
 set(SOURCE
   ${SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/InteractionStatistics.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ModelStatistics.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/OddsRatioStatistics.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ModelStatisticsFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatistics.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTable.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTableFactory.cpp
   PARENT_SCOPE
 )
 
