--- a/src/data/factories/CMakeLists.txt
+++ b/src/data/factories/CMakeLists.txt
@@ -10,6 +10,11 @@ set(INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
+set(GPU_SOURCE
+  ${GPU_SOURCE}
+  PARENT_SCOPE
+)
+
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerFactory.cpp
