--- a/src/container/data/factories/CMakeLists.txt
+++ b/src/container/data/factories/CMakeLists.txt
@@ -1,6 +1,17 @@
+add_subdirectory(cpu)
+
+if(NOT ${CPU})
+  add_subdirectory(cuda)
+endif()
+
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
+  PARENT_SCOPE
+)
+
+set(GPU_SOURCE
+  ${GPU_SOURCE}
   PARENT_SCOPE
 )
 
