Updated AlleleStatistics and added inheritance for it for CPU/CUDA. Added new Kernel to calculate number of alleles per genotype.

--- a/test/cuda/kernels/CMakeLists.txt
+++ b/test/cuda/kernels/CMakeLists.txt
@@ -14,5 +14,6 @@ set(TEST_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/LogLikelihoodPartsTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/LogisticTransformTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/VectorMultiply1MinusVectorTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CalculateNumberOfAllelesPerGenotype.cpp
   PARENT_SCOPE
 )
