--- a/src/data/factories/cuda/CMakeLists.txt
+++ b/src/data/factories/cuda/CMakeLists.txt
@@ -12,5 +12,6 @@ set(SOURCE
 set(GPU_SOURCE
   ${GPU_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaCovariatesHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CudaEnvironmentFactorHandlerFactory.cpp
   PARENT_SCOPE
 )
