Added and updated tests for statistics classes. Updated some mocks and some constructors for these mocks.

--- a/test/statistics/CMakeLists.txt
+++ b/test/statistics/CMakeLists.txt
@@ -1,3 +1,6 @@
+add_subdirectory(factories)
+add_subdirectory(interaction)
+
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -6,11 +9,8 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/InteractionStatisticsTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/OddsRatioStatisticsTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsTest.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/AlleleStatisticsFactoryTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTableTest.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/ContingencyTableFactoryTest.cpp
   PARENT_SCOPE
 )
