--- a/test/cuda/kernels/CMakeLists.txt
+++ b/test/cuda/kernels/CMakeLists.txt
@@ -15,5 +15,9 @@ set(TEST_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/LogisticTransformTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/VectorMultiply1MinusVectorTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CalculateNumberOfAllelesPerGenotype.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ApplyAdditiveModelTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ApplyGeneticModelTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ConstSubtractVectorTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/VectorCopyIndexes.cpp
   PARENT_SCOPE
 )
