--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -24,6 +24,6 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandler.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesMatrixHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesHandler.cpp
   PARENT_SCOPE
 )
