--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -22,7 +22,7 @@ set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesHandler.cpp
   PARENT_SCOPE
