--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(data)
 add_subdirectory(container)
 add_subdirectory(configuration)
 add_subdirectory(fileIO)
-add_subdirectory(model)
+#add_subdirectory(model)
 add_subdirectory(statistics)
 add_subdirectory(task)
 add_subdirectory(blas)
