--- a/src/data/factories/CMakeLists.txt
+++ b/src/data/factories/CMakeLists.txt
@@ -17,9 +17,9 @@ set(GPU_SOURCE
 
 set(SOURCE
   ${SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandlerFactory.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
   PARENT_SCOPE
 )
