--- a/src/data/factories/cpu/CMakeLists.txt
+++ b/src/data/factories/cpu/CMakeLists.txt
@@ -6,6 +6,7 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/CpuPhenotypeHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CpuCovariatesHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CpuEnvironmentFactorHandlerFactory.cpp
   PARENT_SCOPE
