--- a/src/data/factories/cpu/CMakeLists.txt
+++ b/src/data/factories/cpu/CMakeLists.txt
@@ -9,5 +9,6 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/CpuPhenotypeHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CpuCovariatesHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CpuEnvironmentFactorHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CpuDataHandlerFactory.cpp
   PARENT_SCOPE
 )
