--- a/src/data/factories/cuda/CMakeLists.txt
+++ b/src/data/factories/cuda/CMakeLists.txt
@@ -14,5 +14,6 @@ set(GPU_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaPhenotypeHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaCovariatesHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaEnvironmentFactorHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/CudaDataHandlerFactory.cpp
   PARENT_SCOPE
 )
