--- a/src/data/factories/CMakeLists.txt
+++ b/src/data/factories/CMakeLists.txt
@@ -20,6 +20,6 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandlerFactory.cpp
-  #${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
   PARENT_SCOPE
 )
