Split PersonHandler into two classes, PersonHandler and PersonHandlerLocked

--- a/test/data/CMakeLists.txt
+++ b/test/data/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerLockedTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/IdTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPTest.cpp
