Bunch of changes

--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerLocked.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/DataLocation.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PhenotypeHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/CovariatesHandler.cpp
   PARENT_SCOPE
